Vastly improving rendering performance in Timeline, with multithreaded painting. Revising the RangeQueries classes and their interface to make them more thread safe, and harder for the user to do bad things with them.